third_party/rust/paste/tests/ui/unexpected-modifier.stderr
error: unexpected modifier
 --> $DIR/unexpected-modifier.rs:2:10
  |
2 |     fn [<:lower x>]() {}
  |          ^^^^^^
