third_party/rust/paste/tests/ui/unexpected-modifier.rs
paste::item! {
    fn [<:lower x>]() {}
}

fn main() {}
